# jubeiming

./: .gitignore  README.md  安装记录.txt
back-end/: .env  docker-compose.yml
back-end/jubeiming-restful-api/: CMakeLists.txt  CMakePresets.json  requires.md
back-end/jubeiming-restful-api/bash/: chvers.sh
back-end/jubeiming-restful-api/resources/: config.yaml
back-end/jubeiming-restful-api/src/: define.hpp  global.hpp  init.hpp  main.cpp  main.hpp
back-end/jubeiming-restful-api/src/common/: WXBizDataCrypt.cpp  WXBizDataCrypt.h  exception.cpp  exception.hpp  http_util.hpp  log.cpp  log.hpp  mysql_conn.hpp  phone_verify.hpp  sensitive_words.cpp  sensitive_words.hpp  utils.cpp  utils.hpp
back-end/jubeiming-restful-api/src/routers/: AuthRouter.cpp  AuthRouter.hpp  IRouter.hpp  MainRouter.cpp  MainRouter.hpp
back-end/jubeiming-restful-api/src/services/: sql.cpp  sql.hpp
back-end/jubeiming-restful-api/src/test/: main.hpp
back-end/phone_verification/: client.js  config.js  dockerfile  package-lock.json  package.json  server.js
front-end/jubeiming-main/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
front-end/jubeiming-main/src/: App.vue  config.ts  main.ts
front-end/jubeiming-main/src/api/: index.ts
front-end/jubeiming-main/src/components/: GridItemComponent.vue  NavbarRouterComponent.vue  RecordComponent.vue
front-end/jubeiming-main/src/components/me/: LogoutComponent.vue  PersonalOtherComponent.vue  SelectLangComponent.vue  UserComponent.vue
front-end/jubeiming-main/src/components/message/: MessageBarComponent.vue  MessageBarItemComponent.vue  MessagesChatComponent.vue  NotificationDotComponent.vue  ProfileItemComponent.vue
front-end/jubeiming-main/src/components/orders/: DetailComponent.vue  OrdersComponent.vue  OrdersItemComponent.vue
front-end/jubeiming-main/src/i18n/: en.json  index.ts  zh-cn.json
front-end/jubeiming-main/src/router/: index.ts
front-end/jubeiming-main/src/stores/: currentSelectLanguage.ts  navbarfocus.ts  selectOrderId.ts  userRecord.ts
front-end/jubeiming-main/src/utils/: chooseLanguage.ts  common.ts
front-end/jubeiming-main/src/views/: DevView.vue  HomeView.vue  MeView.vue  MessagesView.vue  NavbarView.vue  OrdersView.vue
